--- a/ball_in.css
+++ b/ball_in.css
@@ -19,8 +19,19 @@ body{
 }
 
 #firebox{
-	width: 100%;
-	height: 100%;
+	width: 736px;
+	height: 525px;
 	background-color: yellow;
+	position: fixed;
+	text-align: center;
+	margin-left: 300px;
+	margin-top: 50px;
 }
+
+#image1{
+	max-width: 100%;
+	max-height: 100%;
+	object-fit:contain;
+}
+
 
