--- a/ball_in.css
+++ b/ball_in.css
@@ -34,4 +34,12 @@ body{
 	object-fit:contain;
 }
 
+#image2{
+	max-width: 100%;
+	max-height: 100%;
+	object-fit:contain;
+	display: none;
+	text-align: center;
+}
+
 
